--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,9 @@ jobs:
   build:
 
   runs-on: ${{matrix.os}}
-  strategy: matrix:
-  os: [ubuntu-latest, winc windows-latest,macOS-latestl
+  strategy: 
+  matrix:
+  os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
     - uses: actions/checkout@v4
